--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TailwindCss</title>
-    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/main.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- end google fonts -->
   </head>
   <body>
-    <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi quae nemo ratione magnam perferendis! Obcaecati aliquam, ipsum ad laborum perspiciatis nisi esse facere quae optio? Veritatis accusamus iste inventore obcaecati.</p></div>
+    <!-- tailwind css default fonts -->
+    <h2 class="font-sans">Lorem ipsum dolor sit amet consectetur.</h2>
+    <h3 class="font-mono">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
+      officiis.
+    </h3>
+    <h4 class="font-serif">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, repellendus
+      quas. Debitis.
+    </h4>
   </body>
 </html>
