style(fonts): apply custom fonts to text elements

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, repellendus
       quas. Debitis.
     </h4>
+    <!-- start applied custom fonts -->
+    <p class="font-primary" >Lorem ipsum dolor sit amet.</p>
+    <p class="font-secondary" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, fugit!</p>
   </body>
 </html>
