style(fonts size): applied variaous tailwndcss font sizes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,37 @@
       quas. Debitis.
     </h4>
     <!-- start applied custom fonts -->
-    <p class="font-primary" >Lorem ipsum dolor sit amet.</p>
-    <p class="font-secondary" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, fugit!</p>
+    <p class="font-primary">Lorem ipsum dolor sit amet.</p>
+    <p class="font-secondary">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, fugit!
+    </p>
+    <hr class="my-4" >
+    <!-- default tailwindcss font size -->
+    <div>
+      <p class="text-xs" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-sm" >Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p class="text-md" >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error,
+        molestias?
+      </p>
+      <p class="text-lg" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-xl" >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, ratione!
+      </p>
+      <p class="text-2xl" >
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, nihil.
+      </p>
+      <p class="text-3xl" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-4xl" >
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore,
+        cumque!
+      </p>
+      <p class="text-5xl" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eos labore accusantium, vel ratione unde exercitationem at nulla corporis eum dolorem. Eveniet nulla fugit labore pariatur assumenda quo modi vitae?</p>
+      <p class="text-6xl" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, sequi?</p>
+      <p class="text-7xl" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-8xl" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-9xl" >Lorem ipsum dolor sit amet.</p>
+    </div>
   </body>
 </html>
