style(custom font size): implemented custom font size

--- a/index.html
+++ b/index.html
@@ -30,33 +30,62 @@
     <p class="font-secondary">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, fugit!
     </p>
-    <hr class="my-4" >
+    <hr class="my-4" />
     <!-- default tailwindcss font size -->
     <div>
-      <p class="text-xs" >Lorem ipsum dolor sit amet.</p>
-      <p class="text-sm" >Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      <p class="text-xs">Lorem ipsum dolor sit amet.</p>
+      <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
       <p>Lorem ipsum dolor sit amet.</p>
-      <p class="text-md" >
+      <p class="text-md">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error,
         molestias?
       </p>
-      <p class="text-lg" >Lorem ipsum dolor sit amet.</p>
-      <p class="text-xl" >
+      <p class="text-lg">Lorem ipsum dolor sit amet.</p>
+      <p class="text-xl">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, ratione!
       </p>
-      <p class="text-2xl" >
+      <p class="text-2xl">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, nihil.
       </p>
-      <p class="text-3xl" >Lorem ipsum dolor sit amet.</p>
-      <p class="text-4xl" >
+      <p class="text-3xl">Lorem ipsum dolor sit amet.</p>
+      <p class="text-4xl">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore,
         cumque!
       </p>
-      <p class="text-5xl" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eos labore accusantium, vel ratione unde exercitationem at nulla corporis eum dolorem. Eveniet nulla fugit labore pariatur assumenda quo modi vitae?</p>
-      <p class="text-6xl" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, sequi?</p>
-      <p class="text-7xl" >Lorem ipsum dolor sit amet.</p>
-      <p class="text-8xl" >Lorem ipsum dolor sit amet.</p>
-      <p class="text-9xl" >Lorem ipsum dolor sit amet.</p>
+      <p class="text-5xl">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eos
+        labore accusantium, vel ratione unde exercitationem at nulla corporis
+        eum dolorem. Eveniet nulla fugit labore pariatur assumenda quo modi
+        vitae?
+      </p>
+      <p class="text-6xl">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi,
+        sequi?
+      </p>
+      <p class="text-7xl">Lorem ipsum dolor sit amet.</p>
+      <p class="text-8xl">Lorem ipsum dolor sit amet.</p>
+      <p class="text-9xl">Lorem ipsum dolor sit amet.</p>
     </div>
+    <!-- custom font sizes -->
+    <p class="text-primary">Lorem ipsum dolor sit amet.</p>
+    <p class="text-secondary">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
+      consequuntur recusandae aliquid, voluptatibus perferendis fuga labore
+      quibusdam eius enim laboriosam.
+    </p>
+    <p class="text-secondary">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur
+      quam illum omnis sed odit aperiam aliquid quos accusantium doloremque
+      dignissimos.
+    </p>
+    <p class="text-primary">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio omnis
+      corrupti officia aut facere, veritatis dolor reiciendis quasi non
+      quisquam!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+      voluptatum?
+    </p>
   </body>
 </html>
