style(line height): create custom font size and line height

--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
       voluptatum?
     </p>
+    <p class="text-primaryWithHeight" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ducimus dolore nihil eos ipsa deserunt officia reprehenderit modi, dolorem esse.</p>
   </body>
 </html>
