style(button): add reusable styles with primary and error states - applied Tailwind Css classes for padding,round, and transitions. - created .btn--primary for blue buttons with hover effect - created .btn-error for red error buttons with hover and text color

--- a/index.html
+++ b/index.html
@@ -88,5 +88,14 @@
       voluptatum?
     </p>
     <p class="text-primaryWithHeight" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ducimus dolore nihil eos ipsa deserunt officia reprehenderit modi, dolorem esse.</p>
+
+    <hr class="my-4" />
+    <button class="btn  btn--primary" >
+        Signin
+    </button>
+
+    <button class="btn  btn--error" >
+        Delete
+    </button>
   </body>
 </html>
