style(base): update base style for h1 and p elements - applied red text color to h1 elements - applied violet text color to p elements using tailwind css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi,
         sequi?
       </p>
-      <p class="text-7xl">Lorem ipsum dolor sit amet.</p>
+      <p class="text-xs">Lorem ipsum dolor sit amet.</p>
       <p class="text-8xl">Lorem ipsum dolor sit amet.</p>
       <p class="text-9xl">Lorem ipsum dolor sit amet.</p>
     </div>
@@ -87,15 +87,18 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
       voluptatum?
     </p>
-    <p class="text-primaryWithHeight" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ducimus dolore nihil eos ipsa deserunt officia reprehenderit modi, dolorem esse.</p>
+    <p class="text-primaryWithHeight">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, et.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+      ducimus dolore nihil eos ipsa deserunt officia reprehenderit modi, dolorem
+      esse.
+    </p>
 
     <hr class="my-4" />
-    <button class="btn  btn--primary" >
-        Signin
-    </button>
+    <button class="btn btn--primary">Signin</button>
 
-    <button class="btn  btn--error" >
-        Delete
-    </button>
+    <button class="btn btn--error">Delete</button>
+
+    <h1>Heading One</h1>
   </body>
 </html>
