style(paragraph): apply tailwind css italic and not-italic styles to paragraph

--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@
       <p class="text-8xl">Lorem ipsum dolor sit amet.</p>
       <p class="text-9xl">Lorem ipsum dolor sit amet.</p>
     </div>
+    <!-- font style -->
+     <p class="italic" >Lorem ipsum dolor sit amet.</p>
+     <p class="not-italic" >Lorem ipsum dolor sit amet.</p>
+    
   </body>
 </html>
