style(paragraph): added various font weight to paragraph elements

--- a/index.html
+++ b/index.html
@@ -67,8 +67,17 @@
       <p class="text-9xl">Lorem ipsum dolor sit amet.</p>
     </div>
     <!-- font style -->
-     <p class="italic" >Lorem ipsum dolor sit amet.</p>
-     <p class="not-italic" >Lorem ipsum dolor sit amet.</p>
-    
+    <p class="italic">Lorem ipsum dolor sit amet.</p>
+    <p class="not-italic">Lorem ipsum dolor sit amet.</p>
+    <!-- font weight -->
+    <p class="font-thin">Lorem ipsum dolor sit amet.</p>
+    <p class="font-extralight">Lorem ipsum dolor sit amet.</p>
+    <p class="font-light">Lorem ipsum dolor sit amet.</p>
+    <p class="font-normal">Lorem ipsum dolor sit amet.</p>
+    <p class="font-medium">Lorem ipsum dolor sit amet.</p>
+    <p class="font-semibold">Lorem ipsum dolor sit amet.</p>
+    <p class="font-bold">Lorem ipsum dolor sit amet.</p>
+    <p class="font-extrabold">Lorem ipsum dolor sit amet.</p>
+    <p class="font-black">Lorem ipsum dolor sit amet.</p>
   </body>
 </html>
