style(letter-spacing): adjust letter spacing with Talwind classes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
       <p class="text-8xl">Lorem ipsum dolor sit amet.</p>
       <p class="text-9xl">Lorem ipsum dolor sit amet.</p>
     </div>
+    <hr>
     <!-- font style -->
     <p class="italic">Lorem ipsum dolor sit amet.</p>
     <p class="not-italic">Lorem ipsum dolor sit amet.</p>
+    <hr>
     <!-- font weight -->
     <p class="font-thin">Lorem ipsum dolor sit amet.</p>
     <p class="font-extralight">Lorem ipsum dolor sit amet.</p>
@@ -79,5 +81,14 @@
     <p class="font-bold">Lorem ipsum dolor sit amet.</p>
     <p class="font-extrabold">Lorem ipsum dolor sit amet.</p>
     <p class="font-black">Lorem ipsum dolor sit amet.</p>
+<hr>
+    <!-- letter-spacing -->
+    <p class="tracking-tighter" >Lorem ipsum dolor sit amet.</p>
+    <p class="tracking-tight" >Lorem ipsum dolor sit amet.</p>
+    <p class="tracking-normal" >Lorem ipsum dolor sit amet.</p>
+    <p class="tracking-wide" >Lorem ipsum dolor sit amet.</p>
+    <p class="tracking-wider"> Lorem ipsum dolor sit amet.</p>
+    <p class="tracking-widest" >Lorem ipsum dolor sit amet.</p>
+    
   </body>
 </html>
