style(list-position): implemented list-position with examples

--- a/index.html
+++ b/index.html
@@ -380,5 +380,16 @@
       corrupti maiores est consequatur quasi autem tempora delectus nam magni
       commodi molestias. Labore harum at eum et maiores laboriosam?
     </p>
+    <!-- list style position -->
+    <ul class="list-inside list-disc">
+      <li>Item - 1</li>
+      <li>Item - 2</li>
+      <li>Item - 3</li>
+    </ul>
+    <ul class="list-outside list-disc">
+      <li>Item - 1</li>
+      <li>Item - 2</li>
+      <li>Item - 3</li>
+    </ul>
   </body>
 </html>
