style(list): list-none,list-disc,list-decimal

--- a/index.html
+++ b/index.html
@@ -391,5 +391,21 @@
       <li>Item - 2</li>
       <li>Item - 3</li>
     </ul>
+    <!-- list type -->
+     <ul class="list-none" >
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+     </ul>
+     <ul class="list-disc" >
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+     </ul>
+     <ul class="list-decimal" >
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+     </ul>
   </body>
 </html>
