style: apply different text alignments (left, center, right, justify, start, end)

--- a/index.html
+++ b/index.html
@@ -407,5 +407,12 @@
       <li>Item 2</li>
       <li>Item 3</li>
      </ul>
+     <!-- text align -->
+     <p class="text-left" >Lorem ipsum dolor sit amet.</p>
+     <p class="text-center" >Lorem ipsum dolor sit amet.</p>
+     <p class="text-right" >Lorem ipsum dolor sit amet.</p>
+     <p class="text-justify" >Lorem ipsum dolor sit amet.</p>
+     <p  class="text-start" >Lorem ipsum dolor sit amet.</p>
+     <p  class="text-end" >Lorem ipsum dolor sit amet.</p>
   </body>
 </html>
