style(text color):  apply text colors using Tailwind CSS utility classes

--- a/index.html
+++ b/index.html
@@ -392,27 +392,52 @@
       <li>Item - 3</li>
     </ul>
     <!-- list type -->
-     <ul class="list-none" >
+    <ul class="list-none">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
-     </ul>
-     <ul class="list-disc" >
+    </ul>
+    <ul class="list-disc">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
-     </ul>
-     <ul class="list-decimal" >
+    </ul>
+    <ul class="list-decimal">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
-     </ul>
-     <!-- text align -->
-     <p class="text-left" >Lorem ipsum dolor sit amet.</p>
-     <p class="text-center" >Lorem ipsum dolor sit amet.</p>
-     <p class="text-right" >Lorem ipsum dolor sit amet.</p>
-     <p class="text-justify" >Lorem ipsum dolor sit amet.</p>
-     <p  class="text-start" >Lorem ipsum dolor sit amet.</p>
-     <p  class="text-end" >Lorem ipsum dolor sit amet.</p>
+    </ul>
+    <!-- text align -->
+    <p class="text-left">Lorem ipsum dolor sit amet.</p>
+    <p class="text-center">Lorem ipsum dolor sit amet.</p>
+    <p class="text-right">Lorem ipsum dolor sit amet.</p>
+    <p class="text-justify">Lorem ipsum dolor sit amet.</p>
+    <p class="text-start">Lorem ipsum dolor sit amet.</p>
+    <p class="text-end">Lorem ipsum dolor sit amet.</p>
+    <!-- text color -->
+    <p class="text-inherit">Lorem ipsum dolor sit amet.</p>
+    <p class="text-current">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-50">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-100">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-200">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-300">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-400">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-500">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-600">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-700">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-800">Lorem ipsum dolor sit amet.</p>
+    <p class="text-slate-900">Lorem ipsum dolor sit amet.</p>
+    <p class="text-black">Lorem ipsum dolor sit amet.</p>
+    <p class="text-white">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-50">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-100">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-200">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-300">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-400">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-500">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-600">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-700">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-800">Lorem ipsum dolor sit amet.</p>
+    <p class="text-red-900">Lorem ipsum dolor sit amet.</p>
   </body>
 </html>
