style(buttons): add utility classes for checkout and cart buttons using Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -439,5 +439,13 @@
     <p class="text-red-700">Lorem ipsum dolor sit amet.</p>
     <p class="text-red-800">Lorem ipsum dolor sit amet.</p>
     <p class="text-red-900">Lorem ipsum dolor sit amet.</p>
+
+    <hr class="py-4" />
+    <button class="btn btn-checkout" >
+      Checkout
+    </button>
+    <button class="btn btn-cart" >
+      Add to Cart 
+    </button>
   </body>
 </html>
