style(utilities): add custom font size utilities for small,medium and large text

--- a/index.html
+++ b/index.html
@@ -448,5 +448,8 @@
       Add to Cart 
     </button>
     <h1>Hello World</h1>
+    <p class="small-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, maiores.</p>
+    <p class="medium-text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, maiores.</p>
+    <p class="large-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, maiores.</p>
   </body>
 </html>
